// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataChart axis 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  grid-area: yAxis;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 1;
  -ms-flex: 0 1;
  flex: 0 1;
  -webkit-flex-basis: 24px;
  -ms-flex-preferred-size: 24px;
  flex-basis: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  grid-area: xAxis;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c8 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

.c6 {
  position: relative;
  grid-area: charts;
}

.c7 {
  position: relative;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          2
        </div>
        <div
          className="c4"
        >
          0.8
        </div>
      </div>
      <div
        className="c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <svg
            className="c8"
            height={192}
            preserveAspectRatio="none"
            viewBox="0 0 384 192"
            width={384}
          >
            <g
              fill="none"
              stroke="#6FFFB0"
              strokeLinecap="butt"
              strokeLinejoin="miter"
              strokeWidth={96}
            >
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 48,144 L 48,128"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 336,144 L 336,48"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        className="c9"
      >
        <div
          className="c10"
        >
          0
        </div>
        <div
          className="c10"
        >
          1
        </div>
      </div>
    </div>
  </div>
  <div
    className="c6"
  >
    <div
      className="c7"
    >
      <svg
        className="c8"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 384 192"
        width={384}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M 336,144 L 336,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="c2"
  >
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <svg
          className="c8"
          height={192}
          preserveAspectRatio="none"
          viewBox="0 0 384 192"
          width={384}
        >
          <g
            fill="none"
            stroke="#6FFFB0"
            strokeLinecap="butt"
            strokeLinejoin="miter"
            strokeWidth={96}
          >
            <g
              fill="none"
            >
              <title />
              <path
                d="M 48,144 L 48,128"
              />
            </g>
            <g
              fill="none"
            >
              <title />
              <path
                d="M 336,144 L 336,48"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        0
      </div>
      <div
        className="c10"
      >
        1
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          2
        </div>
        <div
          className="c4"
        >
          0.8
        </div>
      </div>
      <div
        className="c5"
      />
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <svg
          className="c8"
          height={192}
          preserveAspectRatio="none"
          viewBox="0 0 384 192"
          width={384}
        >
          <g
            fill="none"
            stroke="#6FFFB0"
            strokeLinecap="butt"
            strokeLinejoin="miter"
            strokeWidth={96}
          >
            <g
              fill="none"
            >
              <title />
              <path
                d="M 48,144 L 48,128"
              />
            </g>
            <g
              fill="none"
            >
              <title />
              <path
                d="M 336,144 L 336,48"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <svg
          className="c8"
          height={192}
          preserveAspectRatio="none"
          viewBox="0 0 384 192"
          width={384}
        >
          <g
            fill="none"
            stroke="#6FFFB0"
            strokeLinecap="butt"
            strokeLinejoin="miter"
            strokeWidth={96}
          >
            <g
              fill="none"
            >
              <title />
              <path
                d="M 48,144 L 48,128"
              />
            </g>
            <g
              fill="none"
            >
              <title />
              <path
                d="M 336,144 L 336,48"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        0
      </div>
      <div
        className="c10"
      >
        1
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c11"
        >
          2
        </div>
        <div
          className="c11"
        >
          1.7
        </div>
        <div
          className="c11"
        >
          1.4
        </div>
        <div
          className="c11"
        >
          1.1
        </div>
        <div
          className="c11"
        >
          0.8
        </div>
      </div>
      <div
        className="c5"
      />
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <svg
          className="c8"
          height={192}
          preserveAspectRatio="none"
          viewBox="0 0 384 192"
          width={384}
        >
          <g
            fill="none"
            stroke="#6FFFB0"
            strokeLinecap="butt"
            strokeLinejoin="miter"
            strokeWidth={96}
          >
            <g
              fill="none"
            >
              <title />
              <path
                d="M 48,144 L 48,128"
              />
            </g>
            <g
              fill="none"
            >
              <title />
              <path
                d="M 336,144 L 336,48"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataChart dates 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  grid-area: yAxis;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-left: 48px;
  padding-right: 48px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-left: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-left: 48px;
  padding-right: 48px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  grid-area: xAxis;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c13 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

.c6 {
  position: relative;
  grid-area: charts;
}

.c7 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c12 {
  position: relative;
  display: block;
}

@media only screen and (max-width:768px) {
  .c9 {
    border-left: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    border-top: solid 1px rgba(0,0,0,0.33);
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          350K
        </div>
        <div
          className="c4"
        >
          0K
        </div>
      </div>
      <div
        className="c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <div
              className="c9"
            />
            <div
              className="c9"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c10"
          >
            <div
              className="c11"
            />
            <div
              className="c11"
            />
          </div>
        </div>
        <div
          className="c12"
        >
          <svg
            className="c13"
            height={192}
            preserveAspectRatio="none"
            viewBox="0 0 384 192"
            width={384}
          >
            <g
              fill="none"
              stroke="#6FFFB0"
              strokeLinecap="butt"
              strokeLinejoin="miter"
              strokeWidth={96}
            >
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 48,144 L 48,144"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 144,144 L 144,113.52384"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 240,144 L 240,83.04768000000001"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 336,144 L 336,52.57152000000002"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        className="c14"
      >
        <div
          className="c15"
        >
          1
        </div>
        <div
          className="c15"
        >
          4
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          350K
        </div>
        <div
          className="c4"
        >
          0K
        </div>
      </div>
      <div
        className="c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <div
              className="c9"
            />
            <div
              className="c9"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c10"
          >
            <div
              className="c11"
            />
            <div
              className="c11"
            />
          </div>
        </div>
        <div
          className="c12"
        >
          <svg
            className="c13"
            height={192}
            preserveAspectRatio="none"
            viewBox="0 0 384 192"
            width={384}
          >
            <g
              fill="none"
              stroke="#6FFFB0"
              strokeLinecap="butt"
              strokeLinejoin="miter"
              strokeWidth={96}
            >
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 48,144 L 48,144"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 144,144 L 144,113.52384"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 240,144 L 240,83.04768000000001"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 336,144 L 336,52.57152000000002"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        className="c14"
      >
        <div
          className="c15"
        >
          1
        </div>
        <div
          className="c15"
        >
          4
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          350K
        </div>
        <div
          className="c4"
        >
          0K
        </div>
      </div>
      <div
        className="c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <div
              className="c9"
            />
            <div
              className="c9"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c10"
          >
            <div
              className="c11"
            />
            <div
              className="c11"
            />
          </div>
        </div>
        <div
          className="c12"
        >
          <svg
            className="c13"
            height={192}
            preserveAspectRatio="none"
            viewBox="0 0 384 192"
            width={384}
          >
            <g
              fill="none"
              stroke="#6FFFB0"
              strokeLinecap="butt"
              strokeLinejoin="miter"
              strokeWidth={96}
            >
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 48,144 L 48,144"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 144,144 L 144,113.52384"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 240,144 L 240,83.04768000000001"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 336,144 L 336,52.57152000000002"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        className="c14"
      >
        <div
          className="c15"
        >
          1 AM
        </div>
        <div
          className="c15"
        >
          4 AM
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          350K
        </div>
        <div
          className="c4"
        >
          0K
        </div>
      </div>
      <div
        className="c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <div
              className="c9"
            />
            <div
              className="c9"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c10"
          >
            <div
              className="c11"
            />
            <div
              className="c11"
            />
          </div>
        </div>
        <div
          className="c12"
        >
          <svg
            className="c13"
            height={192}
            preserveAspectRatio="none"
            viewBox="0 0 384 192"
            width={384}
          >
            <g
              fill="none"
              stroke="#6FFFB0"
              strokeLinecap="butt"
              strokeLinejoin="miter"
              strokeWidth={96}
            >
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 48,144 L 48,144"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 144,144 L 144,113.52384"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 240,144 L 240,83.04768000000001"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 336,144 L 336,52.57152000000002"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        className="c14"
      >
        <div
          className="c15"
        >
          5/1
        </div>
        <div
          className="c15"
        >
          5/4
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          350K
        </div>
        <div
          className="c4"
        >
          0K
        </div>
      </div>
      <div
        className="c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <div
              className="c9"
            />
            <div
              className="c9"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c10"
          >
            <div
              className="c11"
            />
            <div
              className="c11"
            />
          </div>
        </div>
        <div
          className="c12"
        >
          <svg
            className="c13"
            height={192}
            preserveAspectRatio="none"
            viewBox="0 0 384 192"
            width={384}
          >
            <g
              fill="none"
              stroke="#6FFFB0"
              strokeLinecap="butt"
              strokeLinejoin="miter"
              strokeWidth={96}
            >
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 48,144 L 48,144"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 144,144 L 144,113.52384"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 240,144 L 240,83.04768000000001"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 336,144 L 336,52.57152000000002"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        className="c14"
      >
        <div
          className="c15"
        >
          Jan
        </div>
        <div
          className="c15"
        >
          Apr
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          350K
        </div>
        <div
          className="c4"
        >
          0K
        </div>
      </div>
      <div
        className="c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <div
              className="c9"
            />
            <div
              className="c9"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c10"
          >
            <div
              className="c11"
            />
            <div
              className="c11"
            />
          </div>
        </div>
        <div
          className="c12"
        >
          <svg
            className="c13"
            height={192}
            preserveAspectRatio="none"
            viewBox="0 0 384 192"
            width={384}
          >
            <g
              fill="none"
              stroke="#6FFFB0"
              strokeLinecap="butt"
              strokeLinejoin="miter"
              strokeWidth={96}
            >
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 48,144 L 48,144"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 144,144 L 144,113.52384"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 240,144 L 240,83.04768000000001"
                />
              </g>
              <g
                fill="none"
              >
                <title />
                <path
                  d="M 336,144 L 336,52.57152000000002"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        className="c14"
      >
        <div
          className="c15"
        >
          2001
        </div>
        <div
          className="c15"
        >
          2004
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataChart default 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

.c1 {
  position: relative;
  grid-area: charts;
}

.c2 {
  position: relative;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <svg
        className="c3"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 384 192"
        width={384}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M 336,144 L 336,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`DataChart gap 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

.c1 {
  position: relative;
  grid-area: charts;
}

.c2 {
  position: relative;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <svg
        className="c3"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 384 192"
        width={384}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M 336,144 L 336,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <svg
        className="c3"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 384 192"
        width={384}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M 336,144 L 336,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <svg
        className="c3"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 384 192"
        width={384}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M 336,144 L 336,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`DataChart guide 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-left: 48px;
  padding-right: 48px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-left: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-left: 48px;
  padding-right: 48px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

.c1 {
  position: relative;
  grid-area: charts;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c7 {
  position: relative;
  display: block;
}

@media only screen and (max-width:768px) {
  .c4 {
    border-left: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    border-top: solid 1px rgba(0,0,0,0.33);
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        />
        <div
          className="c4"
        />
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        />
        <div
          className="c6"
        />
      </div>
    </div>
    <div
      className="c7"
    >
      <svg
        className="c8"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 384 192"
        width={384}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M 336,144 L 336,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c7"
    >
      <svg
        className="c8"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 384 192"
        width={384}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M 336,144 L 336,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        />
        <div
          className="c4"
        />
      </div>
    </div>
    <div
      className="c7"
    >
      <svg
        className="c8"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 384 192"
        width={384}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M 336,144 L 336,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        />
        <div
          className="c6"
        />
        <div
          className="c6"
        />
        <div
          className="c6"
        />
        <div
          className="c6"
        />
      </div>
    </div>
    <div
      className="c7"
    >
      <svg
        className="c8"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 384 192"
        width={384}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M 336,144 L 336,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`DataChart legend 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  grid-area: legend;
  margin-top: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #6FFFB0;
  color: #444444;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
}

.c8 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 6px;
}

.c4 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

.c2 {
  position: relative;
  grid-area: charts;
}

.c3 {
  position: relative;
  display: block;
}

.c9 {
  font-size: 18px;
  line-height: 24px;
}

@media only screen and (max-width:768px) {
  .c5 {
    margin-top: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    padding: 6px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <svg
          className="c4"
          height={192}
          preserveAspectRatio="none"
          viewBox="0 0 384 192"
          width={384}
        >
          <g
            fill="none"
            stroke="#6FFFB0"
            strokeLinecap="butt"
            strokeLinejoin="miter"
            strokeWidth={96}
          >
            <g
              fill="none"
            >
              <title />
              <path
                d="M 48,144 L 48,128"
              />
            </g>
            <g
              fill="none"
            >
              <title />
              <path
                d="M 336,144 L 336,48"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
        />
        <div
          className="c8"
        />
        <span
          className="c9"
        >
          a
        </span>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <svg
        className="c4"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 384 192"
        width={384}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M 336,144 L 336,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`DataChart pad 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

.c1 {
  position: relative;
  grid-area: charts;
}

.c2 {
  position: relative;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <svg
        className="c3"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 384 192"
        width={384}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M 336,144 L 336,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <svg
        className="c3"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 384 192"
        width={384}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M 336,144 L 336,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <svg
        className="c3"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 384 192"
        width={384}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M 336,144 L 336,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`DataChart size 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

.c1 {
  position: relative;
  grid-area: charts;
  width: 100%;
  max-width: none;
  height: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  position: relative;
  grid-area: charts;
  width: 100%;
  max-width: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  position: relative;
  grid-area: charts;
}

.c2 {
  position: relative;
  display: block;
  width: 100%;
  height: 100%;
}

.c6 {
  position: relative;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <svg
        className="c3"
        height={0}
        preserveAspectRatio="none"
        viewBox="0 0 0 0"
        width={0}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,-48 L 48,-32"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M -48,-48 L -48,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c2"
    >
      <svg
        className="c3"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 0 192"
        width={0}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M -48,144 L -48,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <svg
        className="c3"
        height={192}
        preserveAspectRatio="none"
        viewBox="0 0 288 192"
        width={288}
      >
        <g
          fill="none"
          stroke="#6FFFB0"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={96}
        >
          <g
            fill="none"
          >
            <title />
            <path
              d="M 48,144 L 48,128"
            />
          </g>
          <g
            fill="none"
          >
            <title />
            <path
              d="M 240,144 L 240,48"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
